force-app/main/default/objects/FSM_GISSTParams__c/FSM_GISSTParams__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>GISST Params</label>
</CustomObject>