force-app/main/default/objects/FSM_GISSTParams__c/fields/FSM_ItemID_Waste__c.field-meta.xml
<CustomField>
    <fullName>FSM_ItemID_Waste__c</fullName>
    <label>Item ID (Waste)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>