force-app/main/default/objects/FSM_GISSTParams__c/fields/FSM_ItemID_WaterDevServMetering__c.field-meta.xml
<CustomField>
    <fullName>FSM_ItemID_WaterDevServMetering__c</fullName>
    <label>Item ID (Water DevServ Metering)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>