force-app/main/default/objects/FSM_GISSTParams__c/fields/FSM_Scale__c.field-meta.xml
<CustomField>
    <fullName>FSM_Scale__c</fullName>
    <description>SFS-7997</description>
    <label>Scale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>